<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/app_bar_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView"
        android:iconTint="@color/white"
        app:iconTint="@color/white"/>
    <item
        android:id="@+id/action_1"
        android:title="@string/action_1"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_2"
        android:title="@string/action_2"
        app:showAsAction="never" />
    <group>
        <item
            android:id="@+id/action_3"
            android:icon="@drawable/ic_baseline_extension_24"
            android:iconTint="@color/white"
            android:title="@string/action_3"
            app:iconTint="@color/white"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/action_4"
            android:title="@string/action_4"
            app:showAsAction="never" />
    </group>
</menu>